# bureaublad

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  compose.yaml  crowdin.yaml  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: backend-ci.yaml  build-backend.yaml  build-frontend.yaml  ci.yaml  crowdin-download.yaml  crowdin-upload.yaml  frontend-ci.yaml  general-ci.yaml  sonarcube.yaml
backend/: .dockerignore  Dockerfile  README.md  dev.env  example.env  pyproject.toml
backend/app/: authentication.py  config.py  exception.py  exceptions.py  lifespan.py  main.py  token_exchange.py
backend/app/clients/: ai.py  base.py  caldav.py  conversation.py  docs.py  drive.py  grist.py  matrix.py  meet.py  nextcloud.py  ocs.py  openzaak.py  zaken.py
backend/app/core/: authentication.py  config.py  exception_handlers.py  http_clients.py  lifespan.py  logging.py  oauth.py  redis.py  session.py  translate.py
backend/app/locales/: messages.pot
backend/app/locales/nl_NL/LC_MESSAGES/: messages.po
backend/app/middleware/: logging.py  request_id.py  session.py  translate.py
backend/app/models/: __init__.py  activity.py  ai.py  config.py  conversation.py  document.py  grist.py  meeting.py  note.py  pagination.py  room.py  search.py  task.py  user.py  zaak.py
backend/app/routes/: ai.py  authentication.py  caldav.py  config.py  conversations.py  docs.py  drive.py  grist.py  health.py  main.py  meet.py  nextcloud.py  ocs.py  openzaak.py  root.py  rss.py  zaken.py
backend/app/utils/: mask.py  request_id.py
backend/bureaublad_api/: context.py  main.py  token_exchange.py  types.py
backend/bureaublad_api/clients/: caldav.py  docs.py  drive.py  meet.py  ocs.py
backend/bureaublad_api/core/: __init__.py  authentication.py  config.py  exception_handlers.py  logging.py
backend/bureaublad_api/middleware/: logging.py
backend/bureaublad_api/models/: activity.py  calendar.py  meeting.py  note.py
backend/bureaublad_api/routes/: ai.py  caldav.py  config.py  docs.py  drive.py  main.py  meet.py  ocs.py  rss.py
backend/scripts/: compile_translation.sh  extract_translation.sh  format.sh  get_bearer_token.sh  get_tokens.sh  lint.sh  test.sh  test_matrix.py  typecheck.sh
backend/src/: settings.py
backend/tests/: conftest.py
backend/tests/clients/: test_ai.py  test_docs.py  test_drive.py  test_grist.py  test_meet.py  test_ocs.py
backend/tests/core/: test_authentication.py  test_http_clients.py
backend/tests/routes/: test_ai.py  test_authentication.py  test_caldav.py  test_config.py  test_conversations.py  test_docs.py  test_drive.py  test_grist.py  test_health.py  test_meet.py  test_ocs.py
backend/tests/utils/: test_mask.py
frontend/: .dockerignore  .gitignore  Dockerfile  I18N_MIGRATION_GUIDE.md  README.md  THEMING.md  eslint.config.mjs  example.env  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/messages/: en.json  nl.json
frontend/public/: style.css
frontend/src/app/: custom-style.css  globals.css  layout.jsx  layout.tsx  not-found.jsx  page.jsx  page.tsx
frontend/src/app/404/: page.jsx
frontend/src/app/500/: page.jsx
frontend/src/app/Common/: CustomList.jsx  DynamicIcon.jsx  ErrorResult.jsx  ExternalApp.jsx  Loading.jsx  SearchFiles.jsx  StartLoading.jsx  Widget.jsx  pageConfig.jsx  pageConfig.tsx
frontend/src/app/Components/: PageLayout.tsx
frontend/src/app/Context/: AppContext.jsx
frontend/src/app/Layout/: PageLayout.jsx
frontend/src/app/OldComponents/: applicatieBar.tsx  customModal.tsx  fileTypeIcon.tsx  lifecycleTag.tsx  mijnDocumenten.tsx  mijnDossiers.tsx  mijnKalender.tsx  mijnTaken.tsx  mijnZaken.tsx  search.tsx  updates.tsx  userMenu.tsx
frontend/src/app/admin/: page.jsx
frontend/src/i18n/: LanguageContext.jsx  TranslationsProvider.jsx  config.js
frontend/src/lib/: axios.js  silentLogin.js
keycloak/import/: mijnbureau.json
mocks/: ai.json  conversations.json  docs.json  drive.json  grist.json  meet.json  nextcloud.json
mocks/ai_mock/: Dockerfile  main.py  pyproject.toml
scripts/: gitlint_emoji.py
(+64 files in other folders)
