[project]
name = "app"
description = "API voor bureaublad"
readme = "README.md"
license = "EUPL-1.2"
requires-python = ">=3.13,<3.14"
dependencies = [
    "authlib>=1.6.5",
    "babel>=2.17.0",
    "caldav>=1.4.0",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=1.66.5",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "python-ulid>=2.8.0",
    "types-authlib>=1.6.5.20251005",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/MinBZK/bureaublad"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["app"]

[tool.ruff.lint]
select = ["I", "SIM", "B", "UP", "F", "E", "S", "C90", "DTZ", "LOG", "PIE", "PT", "ERA", "W", "C", "TRY", "RUF", "ANN"]
fixable = ["ALL"]
task-tags = ["TODO"]
ignore = ["TRY003", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105", "DTZ001", "ANN202"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true
reportUnnecessaryIsInstance = false
include = ["app"]
exclude = [
    ".venv",
    "tests"
]

[tool.coverage.run]
source = ["app"]
relative_files = true
command_line = "-m pytest"
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 87
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
addopts = "--strict-markers --strict-config --nf "
filterwarnings = [
  "ignore::UserWarning"
]
log_cli = true
log_cli_level = "INFO"
faulthandler_timeout = 60
asyncio_mode = "auto"
